--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 	<header>
-		<h1 align="center">Hi 👋, I'm Walter Gutierrez</h1>
+		<h1 align="center">Hi 👋, I'm Walter Gutierrez!</h1>
 		<h3 align="center">A passionate developer from Venezuela</h3>
 	</header>
 
